// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Component renders correctly 1`] = `
<img
  alt="Avatar 2"
  className="avatar"
  onClick={[Function]}
  onKeyDown={[Function]}
  src="avatar2.png"
  tabIndex={0}
/>
`;

exports[`Avatar List Component renders correctly 1`] = `
<ul
  className="avatar-list-container"
>
  <li
    className="avatar-container"
  >
    <img
      alt="Avatar 1"
      className="avatar"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="avatar1.png"
      tabIndex={0}
    />
  </li>
  <li
    className="avatar-container"
  >
    <img
      alt="Avatar 2"
      className="avatar selected"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="avatar2.png"
      tabIndex={0}
    />
  </li>
  <li
    className="avatar-container"
  >
    <img
      alt="Avatar 3"
      className="avatar"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="avatar3.png"
      tabIndex={0}
    />
  </li>
  <li
    className="avatar-container"
  >
    <img
      alt="Avatar 4"
      className="avatar"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="avatar4.png"
      tabIndex={0}
    />
  </li>
  <li
    className="avatar-container"
  >
    <img
      alt="Avatar 5"
      className="avatar"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="avatar5.png"
      tabIndex={0}
    />
  </li>
  <li
    className="avatar-container"
  >
    <img
      alt="Avatar 6"
      className="avatar"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="avatar6.png"
      tabIndex={0}
    />
  </li>
</ul>
`;

exports[`Avatar Picker  Component renders correctly 1`] = `
<div
  className="avatar-picker"
>
  <img
    alt="Avatar 1"
    className="current-avatar"
    onClick={[Function]}
    onKeyDown={[Function]}
    src="avatar1.png"
    tabIndex={0}
  />
  
</div>
`;
